# g1-nlp

./: .dockerignore  .env.example  .gitignore  CHANGES_SUMMARY.md  DOCKER_GUIDE.md  DOCUMENTATION_INDEX.md  Dockerfile  GROQ_COMPLETE_SETUP.md  GROQ_IMPLEMENTATION_DONE.md  GROQ_INTEGRATION_SUMMARY.md  GROQ_QUICK_REFERENCE.md  GROQ_SETUP.md  IMPLEMENTATION_DETAILS.md  JARVIS_USER_GUIDE.md  OPTIMIZATION_GUIDE.md  QUICK_START.md  README_OPTIMIZATION.md  VALIDATION_CHECKLIST.md  VISUAL_REFERENCE.md  demo_gestures.py  devlivary_timeline.md  docker-compose.yml  entrypoint.sh  g1_face_greet.py  g1_zmq_sender.py  handshake_working.py  hey_daksh.onnx  hey_jarvis_kaggle.onnx  main.py  remote_code.txt  requirements.txt  sameple.py  test_chroma.py  test_dds.py  test_parakeet.py
bidyutfr/: encodings.pkl
config/: app_config.json
core/: config.py  factory.py  interfaces.py  prompt_builder.py  schemas.py
cpp/: CMakeLists.txt  build.sh  robot_agent.cpp
docs/: conversation.md  nlp_connectivity_deployment_modes.html  nlp_phased_plan.html  nlp_production_readiness.html
models/: hey_jarvis_v0.1.tflite  jarvis.onnx  jarvis.tflite
scripts/: demo-gestures.service  list_docker_devices.py  pull_models.sh  seed_personas.py  setup_autostart.sh  smoke_test.py  test_g1_hardware.py  verify_jarvis.py  wake_word.py
services/actuation/: gesture_dispatcher.py  ros_topic_dispatcher.py
services/asr/: asr_service.py
services/gesture/: gesture_service.py
services/hardware/: __init__.py  echo_cancel.py  g1_audio_driver.py  g1_hardware_manager.py
services/integration/: vms_service.py
services/interaction/: proactive_scheduler.py
services/knowledge/: kb_client.py
services/memory/: memory_manager.py
services/perception/: davoice_wakeword.py  porcupine_wakeword.py  recognition_bridge.py  sherpa_wakeword.py  whisper_wakeword.py
services/reasoning/: dialogue_manager.py  llm_service.py  openai_service.py
services/tts/: tts_service.py
tools/: mcp_calendar.py
utils/: audio.py
